2001-07-10  Bart Veer  <bartv@redhat.com>

	* doc/usbseth.sgml, doc/*.html:
	Document the below changes.

	* cdl/usbs_eth.cdl:
	The USB-ethernet device now registers itself as either eth0 or
	eth1 by default, depending on what else is present in the system.
	Also bootp/dhcp support is prohibited for this network device on
	the ground that it is rather unlikely that a host will provide
	a dhcp service for a network device that does not exist until the
	host-target connection has been fully established.
	

2001-07-02  Bart Veer  <bartv@redhat.com>

	* host/ecos_usbeth.c (ecos_usbeth_probe):
	Determine the endpoints to use for transmits and receives
	from the descriptors supplied by the device.

2001-06-28  Bart Veer  <bartv@redhat.com>

	* include/usbs_eth.h, src/usbsethdrv.c, src/usbseth.c:
	Align receive boundaries to cacheline boundaries, and
	always transfer a multiple of the cacheline size. This
	avoids problems with some USB device drivers.
	
2001-05-21  Bart Veer  <bartv@redhat.com>

	* host/ecos_usbeth.c (ecos_usbeth_start_tx):
	Cope with targets that have problems receiving zero-byte
	packets.

2001-02-02  Bart Veer  <bartv@redhat.com>

	* cdl/usbs_eth.cdl:
	Add doc property to point at the HTML

	* doc/usbseth.sgml, doc/*.html:
	Incorporate changes from docs department, regenerate HTML

2001-01-26  Bart Veer  <bartv@redhat.com>

	* src/usbsethdrv.c (usbs_ethdrv_ioctl):
	Change chipset specification to null, since there is no real
	hardware involved, plus SNMP cleanup.

2001-01-22  Bart Veer  <bartv@redhat.com>

	* doc/usbseth.sgml, doc/makefile, doc/simple.fig, doc/tcpip.fig:
	Added documentation.

2000-12-15  Bart Veer  <bartv@redhat.com>

	* src/usbsethdrv.c:
	Enable poll functions.

2000-11-29  Bart Veer  <bartv@redhat.com>

	* host/ecos_usbeth.c:
	Remove debugging and fix the MTU

2000-11-28  Bart Veer  <bartv@redhat.com>

	* cdl/usbs_eth.cdl
	* include/usbs_eth.h
	* src/usbseth.c
	* src/usbsethdrv